repaired checked view on smaller screens

--- a/src/app/navigation/navigation.component.css
+++ b/src/app/navigation/navigation.component.css
@@ -231,6 +231,10 @@ input[type="radio"]:checked::before {
     height: 18px;
   }
 
+  input[type="radio"]::before {
+    margin-top: 1px;
+  }
+
   /* CHANGE THEME BUTTON */
   .btn {
     height: 45px;
